fix(#11): change gap for section contacts

--- a/src/components/layout/footer/contacts/contacts-footer.module.css
+++ b/src/components/layout/footer/contacts/contacts-footer.module.css
@@ -40,6 +40,14 @@
     row-gap: 56px;
   }
 
+  .column__definition {
+    line-height: 1;
+  }
+
+  .column__title {
+    margin-block-end: 35px;
+  }
+
   .contacts_section {
     margin-block-start: 0;
   }
@@ -54,6 +62,9 @@
   
   .column__social dd:not(:last-child) {
     margin-block-end: 10px;
+  }
+  .column__definition__address {
+    max-width: 460px;
   }
 }
 
